--- a/index.html
+++ b/index.html
@@ -2270,7 +2270,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  height: 50px;
+  height: 30px;
   background-color: transparent;
   color: blue;
   position: relative;
@@ -2280,10 +2280,11 @@ header {
 }
 
 .navbar-mobile .logo-mobile img {
-width: 90px;
+width: 67px;
 padding: 0;
 margin: 0;
-margin-left: -18px;
+padding-top: 5px;
+margin-left: -20px;
 }
 
 .navbar-mobile .nav-links-mobile {
@@ -2318,7 +2319,7 @@ margin-left: -18px;
   top: 10px;
   right: 0;
   width: 250px;
-  height: 90%;
+  height: 80%;
   border: 3px solid var(--sky-blue);
 /*  background-color: rgba(0, 0, 0, 0.8);*/
 background-color: var(--navy);
@@ -2421,20 +2422,23 @@ font-family: "Dancing Script", cursive;
   margin: 0;
   padding-top: 50px;
   text-align: center;
+  padding-left: 25px;
 }
 #home-mobile img{
  padding-right: 30px;
+ padding-top: 0px;
+ margin-top: 0px;
   width: 70%;
   margin: 0;
 }
 #home-mobile h1{
   padding-top: 0px;
   color: yellow;
-  font-size: 40px;
+  font-size: 35px;
   margin: 0;
   padding-top: 10px;
   text-align: center;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 .close-btn-mobile{
     display: block;
@@ -2443,6 +2447,7 @@ font-family: "Dancing Script", cursive;
   font-size: 35px;  /* Size of the icon */
   bottom: 20px;
 position: absolute;
+padding-left: 40px;
       animation: bounce 1.5s ease-in-out infinite; 
   color: var(--sky-blue);   /* Color of the icon */
 }
@@ -2809,7 +2814,7 @@ padding-top:10px;
 
 <!-- Contact Section -->
 <section class="section" id="contact" >
-  <div style="width: 90%;  display: flex; flex-direction: column; align-items: center; gap: 50px;">
+  <div style="width: 90%;  display: flex; flex-direction: column; align-items: center; gap: 50px; border:  3px solid transparent;   margin-left: 80px;  ">
     <!-- Top Heading -->
     <h2 id="contact-heading" style="text-align: center; font-size: 50px; font-weight: bold; color: yellow; margin-top:0;  ">Contact Us</h2>
 
@@ -2926,6 +2931,9 @@ padding-top:10px;
         #contact{
             display: none;
         }
+}
+#contact{
+    height: 70vh;
 }
 </style>
 <!-- ====================================================================================================================== -->
