--- a/index.html
+++ b/index.html
@@ -2535,15 +2535,15 @@ text-align: center;
 .textbox-mobile h2{
     font-size: 17px;
     padding-left: 20px;
-    padding-right: 25px;
+    padding-right: 5px;
     color: var(--white);
 }
 #about-mobile h3{
     color: var(--sky-blue);
     font-size: 25px;
+    font-weight: bold;
     text-align: center;
-    padding-top: 0;
-    margin-top: 0;
+    padding-top: 10px;
     font-family: "Dancing Script", cursive; 
 
 
@@ -2619,7 +2619,7 @@ text-align: center;
      <div class="about-image">
         <!-- <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/girl.png" alt="About Us Image"> -->
 
-<img src="main.png">
+<img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/profile.jpg">
 
     </div>
     <div class="about-text">
@@ -3005,10 +3005,10 @@ text-align: center;
     <section id="about-mobile">
         <div class="aboutheading"><h1>About Us</h1></div>       
         <div class="twodivs-mobile">
-            <div class="imagebox-mobile"> <img src="main.png"> </div>
+            <div class="imagebox-mobile"> <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/profile.jpg"> </div>
             <div class="textbox-mobile">
                 <h1> Hi, I'm Lubna Syed</h1>
-                <h2>Iâ€™m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable.</h2>
+                <h2>I am Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable.</h2>
 
             </div>
         </div>
