--- a/index.html
+++ b/index.html
@@ -2529,13 +2529,13 @@ text-align: center;
 
 .textbox-mobile h1{
     color: var(--sky-blue);
-    font-size: 30px;
+    font-size: 22px;
     padding-left: 25px;
 }
 .textbox-mobile h2{
     font-size: 17px;
     padding-left: 20px;
-    padding-right: 5px;
+    margin: 0;
     color: var(--white);
 }
 #about-mobile h3{
@@ -2624,7 +2624,7 @@ text-align: center;
     </div>
     <div class="about-text">
         <h1>Hi, I'm Lubna Syed</h1>
-        <p>Iâ€™m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
+        <p>I am Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
     </div>
    
 </div>
