--- a/index.html
+++ b/index.html
@@ -2530,10 +2530,11 @@ text-align: center;
 .textbox-mobile h1{
     color: var(--sky-blue);
     font-size: 22px;
+    padding-top: 5px;
     padding-left: 25px;
 }
 .textbox-mobile h2{
-    font-size: 17px;
+    font-size: 14px;
     padding-left: 20px;
     margin: 0;
     color: var(--white);
@@ -2543,7 +2544,7 @@ text-align: center;
     font-size: 25px;
     font-weight: bold;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 0;
     font-family: "Dancing Script", cursive; 
 
 
@@ -2624,7 +2625,7 @@ text-align: center;
     </div>
     <div class="about-text">
         <h1>Hi, I'm Lubna Syed</h1>
-        <p>I am Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
+        <p>Iâ€™m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
     </div>
    
 </div>
@@ -3007,7 +3008,7 @@ text-align: center;
         <div class="twodivs-mobile">
             <div class="imagebox-mobile"> <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/profile.jpg"> </div>
             <div class="textbox-mobile">
-                <h1> Hi, I'm Lubna Syed</h1>
+                <h1> Hi, I'm <br> Lubna Syed</h1>
                 <h2>I am Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable.</h2>
 
             </div>
