--- a/index.html
+++ b/index.html
@@ -2571,13 +2571,13 @@ text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 8px; /* Adding gap between the boxes */
+    gap: 0px; /* Adding gap between the boxes */
 }
 
 /* Style for each box */
 .servicesbox-mobile > div {
     background-color: var(--navy);
-    padding: 10px;
+    padding:0px;
     text-align: center;
 }
 
@@ -2593,7 +2593,9 @@ text-align: center;
     color: var(--sky-blue);
     height: 100px;
     margin-top: 10px;
-    width: 35%; /* 50% width minus gap */
+    margin-left:0;
+    margin-right:0;
+    width: 38%; /* 50% width minus gap */
 }
 
 /* Centering the 7th box with 70% width */
