--- a/index.html
+++ b/index.html
@@ -2566,18 +2566,18 @@ text-align: center;
 }
 
 .servicesbox-mobile {
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 30px; /* Adding gap between the boxes */
+    gap: 20px; /* Adding gap between the boxes */
 }
 
 /* Style for each box */
 .servicesbox-mobile > div {
     background-color: var(--navy);
-    padding: 30px;
+    padding: 25px;
     text-align: center;
 }
 
@@ -2593,12 +2593,16 @@ text-align: center;
     color: var(--sky-blue);
     height: 100px;
     margin-top: 10px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
     width: 35%; /* 50% width minus gap */
 }
 
 /* Centering the 7th box with 70% width */
 .boxseven-mobile {
-    width: 70%;
+    width: 57%;
     margin: 0 auto;
     border-radius: 20px;
     height: 100px;
