--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ background-color: #007bff;
     border: 3px solid var(--sky-blue);
     background-color: var(--navy);
     border-radius: 20px;
-    box-sizing: border-box; /* Ensures padding doesnâ€™t affect width */
+    box-sizing: border-box; /* Ensures padding doesn’t affect width */
 }
 .general{
     border-top-right-radius: 0;
@@ -1369,7 +1369,7 @@ a{
 }
 
 /* Hide all elements with specific IDs */
-#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #portfolio-mobile, #contact-mobile {
+#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #reviews-mobile, #contact-mobile {
   display: none;
 }
 }
@@ -1382,7 +1382,7 @@ a{
 }
 
 /* Hide all elements with specific IDs */
-#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #portfolio-mobile, #contact-mobile {
+#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #reviews-mobile, #contact-mobile {
   display: none;
 }
 }
@@ -1395,7 +1395,7 @@ a{
 }
 
 /* Hide all elements with specific IDs */
-#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #portfolio-mobile, #contact-mobile {
+#nav-links-mobile, #hamburger-mobile, #mobile-menu-mobile, #close-btn-mobile, #home-mobile, #about-mobile, #services-mobile, #reviews-mobile, #contact-mobile {
   display: none;
 }
 }
@@ -2566,12 +2566,12 @@ text-align: center;
 }
 
 .servicesbox-mobile {
-    width:90%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 10px; /* Adding gap between the boxes */
+    gap: 15px; /* Adding gap between the boxes */
 }
 
 /* Style for each box */
@@ -2591,13 +2591,13 @@ text-align: center;
     border: 3px solid var(--sky-blue);
     border-radius: 20px;
     color: var(--sky-blue);
-    height: 100px;
+    height: 120px;
     margin-top: 10px;
     padding-left: 0;
     padding-right: 0;
     margin-left: 0;
     margin-right: 0;
-    width: 33%; /* 50% width minus gap */
+    width: 35%; /* 50% width minus gap */
 }
 
 /* Centering the 7th box with 70% width */
@@ -2605,7 +2605,7 @@ text-align: center;
     width: 57%;
     margin: 0 auto;
     border-radius: 20px;
-    height: 100px;
+    height: 120px;
     margin-top: 10px;
     color: var(--sky-blue);
     border: 3px solid var(--sky-blue);
@@ -2613,31 +2613,92 @@ text-align: center;
 
 
 
+.servicesbox-mobile > div h1 {
+    text-align: center;
+    color: var(--sky-blue);
+    font-size: 22px;
+    padding-top: 0;
+    margin-top: 0;
+    font-weight: bold;
+}
+
+
+.servicesbox-mobile > div i{
+
+    color: var(--blue);
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+
+ .servicesbox-mobile #buttons{
+    color: var(--sky-blue);
+    background-color: var(--navy);
+    border: 2px solid var(--sky-blue);
+    height: 35px;
+    font-size:  20px;
+    text-align: center;
+    display: block;
+    border-radius: 20px;
+    cursor: pointer;
+    width: 50%;
+    transform: translateX(50%);
+}
+
+
+
+ .servicesbox-mobile #buttons:hover{
+    color: var(--navy);
+    background-color: var(--sky-blue);
+}
 
 
 
 
+.mpopupone {
+    position: absolute; /* Ensures the div is positioned relative to #services-mobile */
+    top: 50%; /* Center vertically within the section */
+    left: 50%; /* Center horizontally within the section */
+    transform: translate(-50%, 520%); /* Adjust for perfect centering */
+    z-index: 999; /* Ensure it is on top of other elements */
+    height: 400px;
+    text-align: center;
+    border-radius: 20px;
+    width: 80%;
+    border: 3px solid var(--sky-blue);
+    color: var(--sky-blue);
+    background-color: var(--navy);
+}
 
 
+.mpopupone button {
+    position: absolute; /* Position relative to the .mpopupone div */
+    bottom: 10px; /* Spacing from the bottom of the .mpopupone div */
+    right: 10px; /* Spacing from the right of the .mpopupone div */
+    background-color: var(--navy); /* Button background color */
+    color: var(--sky-blue); /* Button text color */
+    border: 3px solid var(--sky-blue); /* No border for a clean look */
+    display: block;
+    border-radius: 50%; /* Slight rounding for aesthetics */
+    padding: 10px 15px; /* Padding for the button */
+    font-size: 20px; /* Font size for readability */
+    cursor: pointer; /* Pointer cursor on hover */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
+    transition: all 0.3s ease; /* Smooth hover transition */
+}
 
+..mpopupone h1{
+    color: var(--sky-blue);
+    font-size: 35px;
+    text-align: center;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.mpopupone p{
+    color: var(--white);
+    text-align: left;
+    font-size: 18px;
+    padding-left: 20px;
+    padding-right: 10px;
+}
 
 
 
@@ -2707,7 +2768,7 @@ text-align: center;
     </div>
     <div class="about-text">
         <h1>Hi, I'm Lubna Syed</h1>
-        <p>Iâ€™m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
+        <p>I’m Lubna Syed, a passionate and friendly English trainer who loves helping learners grow their confidence and make learning enjoyable. As the heart of The English Nest, i'm committed to helping each learner succeed with confidence.</p>
     </div>
    
 </div>
@@ -2729,12 +2790,12 @@ text-align: center;
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/expert.png">
             <h3>Experience</h3>
-            <p>Learn with a teacher who truly understands English and makes every lesson clear and fun. Youâ€™re in great hands here!</p>
+            <p>Learn with a teacher who truly understands English and makes every lesson clear and fun. You’re in great hands here!</p>
         </div>
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/care.png">
             <h3>Care</h3>
-            <p>Receive one-on-one attention every step of the way. Weâ€™re here to make sure you succeed comfortably and confidently.</p>
+            <p>Receive one-on-one attention every step of the way. We’re here to make sure you succeed comfortably and confidently.</p>
         </div>
         <div class="abt-txt-box">
             <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/results.png">
@@ -2781,7 +2842,7 @@ text-align: center;
 <div class="popuptwo">
 <div class="pte">
       <h1>PTE</h1>
-      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether youâ€™re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If youâ€™re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
+      <p>PTE  is all about getting you ready to thrive in English-speaking environments, whether you’re planning to study, work, or settle down abroad. This test checks how well you can read, write, listen, and speak English, and it's known for its fast, unbiased scoring thanks to AI. If you’re in a rush and need results quickly, PTE has your back, especially for countries like Australia, New Zealand, and Canada.</p>
 <h4>Difficulty level: Moderate to High</h4>
 <button onclick="hidePopuptwo()"><i class="fas fa-multiply" onclick="hidePopuptwo()"></i></button>
 
@@ -2798,7 +2859,7 @@ text-align: center;
 <div class="popupthree">
   <div class="toefl">
      <h1>TOEFL</h1>
-     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, itâ€™s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
+     <p>TOEFL is your ticket if you're dreaming of studying in the U.S. or Canada. This test dives deep into how well you handle university-level English, from understanding lectures to writing essays. With thousands of schools accepting TOEFL scores, it’s a top pick for students ready to take on the academic world. Plus, the score is valid for two years, giving you time to plan your next big step.</p>
 <h4>Difficulty level: High</h4>
 <button onclick="hidePopupthree()"><i class="fas fa-multiply" onclick="hidePopupthree()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupthree()"></i></div> -->
@@ -2809,7 +2870,7 @@ text-align: center;
 <div class="popupfour">
   <div class="business">
     <h1>Business English</h1>
-      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isnâ€™t just about learning words, itâ€™s about mastering the language of global business and showing youâ€™re ready for international success.</p>
+      <p>Want to shine in the business world? The Business English course is designed to get you confident with everything from emails to presentations. Imagine negotiating deals or leading meetings in fluent, professional English. This course isn’t just about learning words, it’s about mastering the language of global business and showing you’re ready for international success.</p>
 <h4>Difficulty level: Moderate</h4>
 <button onclick="hidePopupfour()"><i class="fas fa-multiply" onclick="hidePopupfour()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupfour()"></i></div> -->
@@ -2820,7 +2881,7 @@ text-align: center;
 <div class="popupfive">
   <div class="spoken">
        <h1>Spoken English</h1>
- <p>If you're looking to break free from language barriers, this Spoken English course is where you start. Itâ€™s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, youâ€™ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
+ <p>If you're looking to break free from language barriers, this Spoken English course is where you start. It’s all about boosting your confidence in everyday conversations, from casual chats to professional talks. With plenty of practice, you’ll find yourself speaking naturally, expressing your thoughts clearly, and enjoying the ease that comes with real fluency.</p>
 <h4>Difficulty level: Easy to Moderate</h4>
 <button onclick="hidePopupfive()"><i class="fas fa-multiply" onclick="hidePopupfive()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupfive()"></i></div> -->
@@ -2831,7 +2892,7 @@ text-align: center;
 <div class="popupsix">
   <div class="oxford">
        <h1>Oxford English Test</h1>
-       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. Itâ€™s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether itâ€™s for work, study, or travel.</p>
+       <p>Developed by the experts at Oxford, this test is a smart choice if you want to know where you stand with your English skills. It’s respected worldwide and covers all the basics: reading, listening, and grammar. No stress, just a solid evaluation of how ready you are for English-speaking environments, whether it’s for work, study, or travel.</p>
 <h4>Difficulty level: Moderate </h4>
 <button onclick="hidePopupsix()"><i class="fas fa-multiply" onclick="hidePopupsix()"></i></button>
       <!-- <div class="icon"><i class="fas fa-multiply" onclick="hidePopupsix()"></i></div> -->
@@ -2842,7 +2903,7 @@ text-align: center;
 <div class="popupseven">
   <div class="spouse">
     <h1>Life Skills for Spouse Visa</h1>
-    <p>This oneâ€™s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? Itâ€™s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
+    <p>This one’s tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? It’s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
 </p>
 <h4>Difficulty level: Easy</h4>
 <button onclick="hidePopupseven()"><i class="fas fa-multiply" onclick="hidePopupseven()"></i></button>
@@ -2989,7 +3050,7 @@ text-align: center;
       <!-- Left Content -->
       <div class="contact-info-box" id="contact-info-box" style="flex: 1; min-width: 250px; max-width: 45%;">
         <h3 id="book-call-heading" style="font-size: 40px; color: var(--sky-blue); margin-top: 0;">Book a 1:1 Call</h3>
-        <p id="book-call-subheading" style="font-size: 20px; color: var(--sky-blue); font-weight: bold;">Ready to take the next step? <br>Letâ€™s connect and bring your vision to life. <br> Book a 1:1 call with us to discuss your ideas.</p>
+        <p id="book-call-subheading" style="font-size: 20px; color: var(--sky-blue); font-weight: bold;">Ready to take the next step? <br>Let’s connect and bring your vision to life. <br> Book a 1:1 call with us to discuss your ideas.</p>
       </div>
 
       <!-- Right Form -->
@@ -3049,7 +3110,7 @@ text-align: center;
         <li><a href="#home-mobile"><i class="fas fa-mobile"></i> Home</a></li>
         <li><a href="#about-mobile"><i class="fas fa-info-circle"></i> About</a></li>
         <li><a href="#services-mobile"><i class="fas fa-cogs"></i> Services</a></li>
-        <li><a href="#portfolio-mobile"><i class="fas fa-briefcase"></i> Portfolio</a></li>
+        <li><a href="#reviews-mobile"><i class="fas fa-briefcase"></i> Portfolio</a></li>
         <li><a href="#contact-mobile"><i class="fas fa-phone"></i> Contact</a></li>
       </ul>
 
@@ -3066,7 +3127,7 @@ text-align: center;
         <li><a href="#home-mobile"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="#about-mobile"><i class="fas fa-user"></i> About</a></li>
         <li><a href="#services-mobile"><i class="fas fa-cogs"></i> Services</a></li>
-        <li><a href="#portfolio-mobile"><i class="fas fa-users"></i> Reviews</a></li>
+        <li><a href="#reviews-mobile"><i class="fas fa-users"></i> Reviews</a></li>
         <li><a href="#contact-mobile"><i class="fas fa-phone"></i> Contact</a></li>
       </ul>
     </div>
@@ -3105,18 +3166,61 @@ text-align: center;
 
 
     <section id="services-mobile">
-<div class="servicesheading"> <h1>Services we offer</h1> </div>
+<div class="servicesheading"> <h1>Our Services</h1> </div>
 
 
 <div class="servicesbox-mobile">
-    <div class="boxone-mobile">Box 1</div>
-    <div class="boxtwo-mobile">Box 2</div>
-    <div class="boxthree-mobile">Box 3</div>
-    <div class="boxfour-mobile">Box 4</div>
-    <div class="boxfive-mobile">Box 5</div>
-    <div class="boxsix-mobile">Box 6</div>
-    <div class="boxseven-mobile">Box 7</div>
+    <div class="boxone-mobile">
+        <div class="icon"><i class="fas fa-graduation-cap"></i></div>
+        <h1>IELTS</h1>
+        <button id="buttons" class="mpopone">Details</button>
+    </div>
+    <div class="boxtwo-mobile">
+        <div class="icon"><i class="fas fa-globe"></i></div>
+        <h1>PTE</h1>
+        <button id="buttons" class="mpoptwo">Details</button>
+    </div>
+    <div class="boxthree-mobile">
+        <div class="icon"><i class="fas fa-book"></i></div>
+        <h1>TOEFL</h1>
+                <button id="buttons" class="mpopthree">Details</button>
+    </div>
+    <div class="boxfour-mobile">
+        <div class="icon"><i class="fas fa-briefcase"></i></div>
+        <h1>Business English</h1>
+        <button id="buttons" class="mpopfour">Details</button>
+    </div>
+    <div class="boxfive-mobile">
+        <div class="icon"><i class="fas fa-comments"></i></div>
+        <h1>Spoken English</h1>
+        <button id="buttons" class="mpopfive">Details</button>
+    </div>
+    <div class="boxsix-mobile">
+         <div class="icon"><i class="fas fa-university"></i></div>
+        <h1>Oxford English</h1>
+        <button id="buttons" class="mpopsix">Details</button>
+    </div>
+    <div class="boxseven-mobile">
+          <div class="icon"><i class="fas fa-heart"></i></div>
+        <h1>Life Skills for Spouse Visa</h1>
+        <button id="buttons" class="mpopseven">Details</button>
+    </div>
 </div>
+
+
+<div class="mpopupone">
+    <h1>IELTS</h1>
+    <p>The International English Language Testing System (IELTS) is a widely recognized exam that assesses English proficiency in listening, reading, writing, and speaking. It has two types: Academic, for higher education and professional registration, and General Training, for work, training, or migration. IELTS opens doors to global opportunities with its trusted and comprehensive evaluation.</p>
+    <button ><i class="fas fa-multiply" ></i></button>
+</div>
+<div class="mpopuptwo"></div>
+<div class="mpopupthree"></div>
+<div class="mpopupfour"></div>
+<div class="mpopupfive"></div>
+<div class="mpopupsix"></div>
+<div class="mpopupseven"></div>
+
+
 
 
      </section>
@@ -3125,8 +3229,18 @@ text-align: center;
 
 
 
-    <section id="portfolio-mobile">Portfolio Content</section>
-    <section id="contact-mobile">Contact Content</section>
+    <section id="reviews-mobile"> 
+
+
+
+
+    </section>
+    
+
+
+
+
+    <section id="contact-mobile"> </section>
 
 
 
@@ -3576,12 +3690,18 @@ const navLinksHome = document.querySelectorAll('.mobile-menu-mobile a');
 const navbarMobile = document.getElementById('nav-links-mobile');
 const homeMobile = document.getElementById('home-mobile');
 const aboutMobile = document.getElementById('about-mobile');
+const servicesMobile = document.getElementById('services-mobile');
+const reviewsMobile = document.getElementById('reviews-mobile');
+const contactMobile = document.getElementById('contact-mobile');
 
 // Function to apply blur effect
 function applyBlur() {
   navbarMobile.style.filter = 'blur(5px)';
   homeMobile.style.filter = 'blur(5px)';
   aboutMobile.style.filter = 'blur(5px)';
+  servicesMobile.style.filter = 'blur(5px)';
+  reviewsMobile.style.filter = 'blur(5px)';
+  contactMobile.style.filter = 'blur(5px)';
 }
 
 // Function to remove blur effect
@@ -3589,6 +3709,9 @@ function removeBlur() {
   navbarMobile.style.filter = 'none';
   homeMobile.style.filter = 'none';
   aboutMobile.style.filter = 'none';
+  servicesMobile.style.filter = 'none';
+  reviewsMobile.style.filter = 'none';
+  contactMobile.style.filter = 'none';
 }
 
 // Toggle the mobile menu when hamburger icon is clicked
