--- a/index.html
+++ b/index.html
@@ -2664,7 +2664,7 @@ text-align: center;
     position: absolute; /* Ensures the div is positioned relative to #services-mobile */
     top: 50%; /* Center vertically within the section */
     left: 50%; /* Center horizontally within the section */
-    transform: translate(-50%, 450%); /* Adjust for perfect centering */
+    transform: translate(-50%, 320%); /* Adjust for perfect centering */
     z-index: 999; /* Ensure it is on top of other elements */
     height: 300px;
     display: none;
@@ -4116,12 +4116,23 @@ document.addEventListener('click', (event) => {
 
 
 <script type="text/javascript">
-    // Function to open the popup and apply effects
+   
+
+
+
+
+
+
+
+
+
+
+  // Function to open the popup and apply effects
 function openPopup() {
     // Display the div with class "mpopupone"
     document.querySelector('.mpopupone').style.display = 'block';
 
-    // Add blur effect to the specified divs
+    // Add blur effect and disable pointer events for the specified divs
     const divsToBlur = [
         '#home-mobile',
         '#about-mobile',
@@ -4134,6 +4145,7 @@ function openPopup() {
         const element = document.querySelector(selector);
         if (element) {
             element.style.filter = 'blur(5px)';
+            element.style.pointerEvents = 'none'; // Make the content unclickable
         }
     });
 
@@ -4152,7 +4164,7 @@ function closePopup() {
     // Hide the div with class "mpopupone"
     document.querySelector('.mpopupone').style.display = 'none';
 
-    // Remove blur effect from the specified divs
+    // Remove blur effect and enable pointer events for the specified divs
     const divsToBlur = [
         '#home-mobile',
         '#about-mobile',
@@ -4165,6 +4177,7 @@ function closePopup() {
         const element = document.querySelector(selector);
         if (element) {
             element.style.filter = 'none';
+            element.style.pointerEvents = 'auto'; // Restore click functionality
         }
     });
 
@@ -4181,6 +4194,25 @@ function closePopup() {
 // Attach the functions to the respective buttons
 document.querySelector('.mpopone').onclick = openPopup;
 document.querySelector('#popupone-mobile').onclick = closePopup;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </script>
 
