--- a/index.html
+++ b/index.html
@@ -3576,7 +3576,7 @@ text-align: center;
               <button id="popupsix-mobile"><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupseven">
-    <h1>Life Skills for Spouse Visa</h1>
+    <h1>Spouse Visa</h1>
     <p>This one is tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? It’s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
 </p>
        <button id="popupseven-mobile"><i class="fas fa-multiply" ></i></button>
