--- a/index.html
+++ b/index.html
@@ -2663,8 +2663,8 @@ text-align: center;
 
 .mpopupone {
      position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 25px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 35px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2710,8 +2710,8 @@ text-align: center;
 
 .mpopuptwo {
     position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2758,8 +2758,8 @@ text-align: center;
 
 .mpopupthree {
     position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2806,8 +2806,8 @@ text-align: center;
 
 .mpopupfour {
    position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2855,8 +2855,8 @@ text-align: center;
 
 .mpopupfive {
    position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2903,8 +2903,8 @@ text-align: center;
 
 .mpopupsix {
      position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2951,8 +2951,8 @@ text-align: center;
 
 .mpopupseven {
     position: absolute; /* Ensures the div is positioned relative to #services-mobile */
-    top: 220%; /* Center vertically within the section */
-    left: 30px; /* Center horizontally within the section */
+    top: 200%; /* Center vertically within the section */
+    left: 50px; /* Center horizontally within the section */
     right: 50%;
     z-index: 999; /* Ensure it is on top of other elements */
     height: 320px;
@@ -2998,17 +2998,184 @@ text-align: center;
 
 
 
+/* Mobile Testimonial Section with Custom Colors */
+
+
+#reviews-mobile {
+  padding: 20px;
+  margin-top: 200px;
+  background-color: var(--navy);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.review-box {
+  background: var(--navy);
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 2px 2px 10px 2px var(--sky-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.profile-pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid var(--sky-blue);
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.name {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: var(--sky-blue);
+  margin: 0;
+}
+
+.stars i {
+  color: yellow; /* Using yellow for stars */
+  font-size: 1em;
+}
+
+.message {
+  font-size: 17px;
+  color: var(--sky-blue);
+  margin: 0;
+  line-height: 1.5;
+  font-style: italic;
+  font-weight: bold;
+}
+#reviews-mobile h1{
+    color: yellow;
+    font-size: 40px;
+    text-align: center;
+}
 
 
 
 
+/*================================ Contact =========================*/
+/* Mobile Contact Section */
+#contact-mobile {
+  padding: 20px;
+  margin-top: 100px;
+  background-color: var(--navy);
+  color: var(--sky-blue);
+  display:;
+  justify-content: center;
+  align-items: center;
+  height: 90vh; /* Ensures the section takes up full vertical height */
+}
 
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 0px;
+  width: 100%; /* Adjusts width for better spacing on mobile */
+}
 
+.input-group {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  left: 10%;
+  background: var(--navy);
+  border-radius: 15px;
+  color: var(--sky-blue);
+  border: 2px solid var(--blue);
+}
 
+.input-group i {
+  font-size: 1.2em;
+  color: var(--blue);
+  padding: 10px;
+}
 
+.input-group input,
+.input-group textarea {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 1em;
+  color: var(--sky-blue);
+  font-family: 'Quicksand';
+  border-radius: 8px;
+  background: none;
+  autocomplete: off;
+}
 
+.input-group textarea {
+  resize: none;
+}
 
+button#send-button {
+  background: var(--blue);
+  color: var(--navy);
+  padding: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  display: block;
+  outline: none;
+  border-radius: 20px;
+  border: 2px solid var(--navy);
+  transition: background-color 0.3s ease;
+  margin: 0 auto;
+  width: 40%;
+  font-weight: bold;
+  text-align: center;
+}
 
+button#send-button:hover {
+  background: var(--navy);
+  color: var(--sky-blue);
+  border: 2px solid var(--sky-blue);
+}
+
+#contact-mobile h1{
+    color: yellow;
+    font-size: 40px;
+    text-align: center;
+}
+
+#contact-mobile h2{
+    text-align: center;
+    font-size: 25px;
+}
+
+.lastname{
+    margin-bottom: 0;
+    padding-bottom: 0;
+    margin-top: 100px;
+}
+.lastname a{
+color: var(--sky-blue);
+text-align: center;
+text-decoration: none;
+font-size: 20px;
+margin-top: 0;
+margin-bottom: 0;
+padding-bottom: 0;
+padding-top: 0;
+}
 
 
 
@@ -3576,7 +3743,7 @@ text-align: center;
               <button id="popupsix-mobile"><i class="fas fa-multiply" ></i></button>
 </div>
 <div class="mpopupseven">
-    <h1>Spouse Visa</h1>
+    <h1>Life Skills for Spouse Visa</h1>
     <p>This one is tailored for those applying for a UK spouse visa, focusing only on the basics: can you understand and respond in everyday English? It’s a practical, straightforward test designed to show you can handle the day-to-day language of life in an English-speaking country. Perfect for anyone starting fresh with their partner in the UK.
 </p>
        <button id="popupseven-mobile"><i class="fas fa-multiply" ></i></button>
@@ -3584,18 +3751,109 @@ text-align: center;
 </div>
 </div>
 
-    <section id="reviews-mobile"> 
+<!--     <section id="reviews-mobile"> 
 
 
-
-
+<div class="reviewone"></div>
+<div class="reviewtwo"></div>
+<div class="reviewthree"></div>
     </section>
+ -->    
+
+
+<section id="reviews-mobile">
+    <h1>Students Review</h1>
+  <div class="review-box">
+    <div class="profile">
+      <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/Jibranzada.png" alt="Jibran Zada" class="profile-pic">
+      <div class="info">
+        <h3 class="name">Jibran Zada</h3>
+        <div class="stars">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star-half-alt"></i>
+        </div>
+      </div>
+    </div>
+    <p class="message">"Maam syyeda here genuinely care about your growth, my confidence in spoken English has really shot up!."</p>
+  </div>
+  <div class="review-box">
+    <div class="profile">
+      <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/Muneeb.png" alt="Muneeb" class="profile-pic">
+      <div class="info">
+        <h3 class="name">Muneeb</h3>
+        <div class="stars">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+        </div>
+      </div>
+    </div>
+    <p class="message">"Loved the friendly atmosphere and personalized approach, made learning IELTS feel easy and enjoyable!."</p>
+  </div>
+  <div class="review-box">
+    <div class="profile">
+      <img src="https://raw.githubusercontent.com/mrtrojanpk/TheEnglishNest/refs/heads/main/man.png" alt="Micheal" class="profile-pic">
+      <div class="info">
+        <h3 class="name">Michael</h3>
+        <div class="stars">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star-half-alt"></i>
+        </div>
+      </div>
+    </div>
+    <p class="message">"Thanks to their structured PTE classes and supportive staff, I felt completely prepared for my test!.."</p>
+  </div>
+</section>
+
+
+
+
+
+
+    <!-- <section id="contact-mobile"> 
+
+    </section> -->
+
+
+<section id="contact-mobile">
     
+    <h1>Contact Us</h1>
+<h2>Book a 1:1 Call</h2>
+
+  <form id="contact-form">
+    <div class="input-group">
+      <i class="fa fa-user"></i>
+      <input type="text" id="name" name="name" placeholder="Name" autocomplete="off" required>
+    </div>
+    <div class="input-group">
+      <i class="fa fa-phone"></i>
+      <input type="tel" id="number" name="number" placeholder="Phone Number" autocomplete="off" required>
+    </div>
+    <div class="input-group">
+      <i class="fa fa-envelope"></i>
+      <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required>
+    </div>
+    <div class="input-group">
+      <i class="fa fa-comment"></i>
+      <textarea id="message" name="message" placeholder="Message" rows="4" autocomplete="off" required></textarea>
+    </div>
+    <button type="button" id="send-button" onclick="sendMessage()">Send</button>
+  </form>
+  <div class="lastname">
+    <h1> <a href="Jibranzadapk.blogspot.com">Developed by JIbran Zada</a> </h1>
+</div>
+</section>
 
 
 
-
-    <section id="contact-mobile"> </section>
 
 
 
@@ -4227,31 +4485,48 @@ document.querySelector('#popupone-mobile').onclick = closePopup;
 <script type="text/javascript" src="scriptseven.js"></script>
 
 
+<script>
+  function sendMessage() {
+    // Get input values
+    const name = document.getElementById('name').value.trim();
+    const number = document.getElementById('number').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const message = document.getElementById('message').value.trim();
+
+    // Validation messages
+    if (!name) {
+      alert("Please fill in your Name.");
+      return;
+    }
+
+    const phonePattern = /^[0-9]{10,15}$/; // Validates phone numbers (10-15 digits)
+    if (!number || !phonePattern.test(number)) {
+      alert("Please enter a valid Phone Number.");
+      return;
+    }
+
+    const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/; // Basic email validation regex
+    if (!email || !emailPattern.test(email)) {
+      alert("Please enter a valid Email address.");
+      return;
+    }
+
+    if (!message) {
+      alert("Please fill in your Message.");
+      return;
+    }
+
+    // All fields are valid, send the message
+    const whatsappNumber = '923455408366'; // WhatsApp number in international format
+    const whatsappMessage = `Name: ${name}%0APhone: ${number}%0AEmail: ${email}%0AMessage: ${message}`;
+
+    const whatsappURL = `https://wa.me/${whatsappNumber}?text=${whatsappMessage}`;
+    window.open(whatsappURL, '_blank');
+  }
+</script>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</script>
 
 
 
